Fixing the no results gap

--- a/src/_scss/pages/dashboard/graph/_warningsInfoGraph.scss
+++ b/src/_scss/pages/dashboard/graph/_warningsInfoGraph.scss
@@ -10,8 +10,8 @@
     }
 
     .results-table-no-results{
-        margin-top: rem(175);
-        margin-bottom: rem(175);
+        margin-top: rem(179);
+        margin-bottom: rem(179);
     }
 
     .results-table-loading{
